--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"name": "npm-watch-client",
 	"description": "Monitor npm package downloads, search libraries, and view repository trends with real-time insights.",
 	"scripts": {
@@ -12,9 +12,12 @@
 		"format:write": "prettier --write ."
 	},
 	"dependencies": {
+		"framer-motion": "^12.23.24",
 		"next": "^16.0.1",
+		"next-themes": "^0.4.6",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"react-icons": "^5.5.0"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.17",
